# LiteRT-LM

./: .bazelrc  .gitattributes  Cargo.toml  README.md  WORKSPACE  build_macos.sh  cargo-bazel-lock.json  run_bench.sh  run_interactive.sh
.github/workflows/: ci-build-mac.yml  ci-build-win.yml  ci-build.yml
c/: BUILD  engine.cc  engine.h  engine_test.cc  litert_lm_logging.cc
kotlin/: README.md
patches/: BUILD  apple_support_no_uuid.patch
prebuilt/macos_arm64/: libLiteRt.dylib  libLiteRtMetalAccelerator.dylib  libLiteRtTopKWebGpuSampler.dylib  libLiteRtWebGpuAccelerator.dylib
runtime/components/: BUILD  lora.cc  lora.h  lora_test.cc  prompt_template.cc  prompt_template.h  sampler_factory.cc  scoring_cpu_util.cc  sentencepiece_tokenizer.cc  sentencepiece_tokenizer.h  sentencepiece_tokenizer_test.cc
runtime/conversation/: BUILD  conversation.cc  conversation.h  conversation_test.cc  internal_callbacks_adapter.cc  internal_callbacks_adapter.h  internal_callbacks_adapter_test.cc  internal_observable_adapter_test.cc  io_types.h  tool_manager.h  tool_manager_test.cc
runtime/core/: BUILD  engine_advanced_impl.cc  engine_advanced_impl_test.cc  engine_advanced_legacy_impl.cc  engine_impl.cc  engine_legacy_impl.cc  pipeline.cc  pipeline.h  pipeline_test.cc  session_advanced.cc  session_advanced.h  session_advanced_test.cc  session_basic.cc  session_basic.h  session_basic_test.cc  session_factory.cc  session_factory.h  session_factory_test.cc  session_utils.cc  session_utils_test.cc  tasks.cc  tasks.h  tasks_test.cc
runtime/engine/: BUILD  engine.h  engine_factory.h  (+12 more)
(+72 files in other folders)
